--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,4 @@
-<h2>Kia ora</h2>
-<h2>Hellor</h2>
+<h1><span>BHS</span> Student Portal</h1>
+<h2>Kia ora {{ anim_speed }}</h2>
 <p>Powered by Flask</p>
 <br><br><br>
