Clearified tables and improved page design

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,5 @@
-<h1><span>BHS</span> Student Portal</h1>
-<h2>Kia ora {{ anim_speed }}</h2>
+<div class="header-background">
+    <h1><span>BHS</span> Student Portal</h1>
+</div>
+<h1 class="welcome-message">Kia ora</h1>
 <p>Powered by Flask</p>
-<br><br><br>
