--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,9 +6,9 @@
     <title>{{ vars["site_title"] }} - {{ title }}</title>
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
     <style>
-        span, .linkButton, .gotoButton, .nav-button {
+        span, .link-button, .folder-button, .back-button {
             transition: all {{ vars['anim_speed'] }};
-        }
+        }  
     </style>
 </head>
 <body>
