--- a/static/style.css
+++ b/static/style.css
@@ -1,83 +1,150 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+:root {
+    --primary-color: rgb(0,78,66);
+    --secondary-color: rgb(0,171,142);
+    --contrast-color: rgb(0,58,44);
+    --font-color: rgb(255,255,255);
+    --background-color: white;
+    --font: "Open Sans", sans-serif; 
+}
+
+/* Text formatting */
 body {
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    color: rgb(255, 255, 255);
-    background-color: rgb(22, 22, 22);
+    color: var(--font-color);
+    background-color: var(--background -color);
+    margin: 0;
 }
 
 p {
-    color: gray;
+    color: var(--secondary-color);
 }
 
 h1 {
     font-size: 600%;
     font-weight: bold;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    margin: 0;
+}
+
+.header-background {
+    background-color: var(--primary-color);
+    width: 100%;
+    padding-top: 150px;
+    padding-bottom: 20px;
+}
+
+h2 {
+    color: var(--secondary-color);
+}
+
+h1, h2, h3, h4, a, p, span {
+    font-family: var(--font);
+}
+
+span {
+    transition: all --anim-speed;
 }
 
 h1 span {
+    transition: none;
     font-weight: bolder;
-    color: red;
+    color: var(--secondary-color);
 }
 
 a {
-    color: lightgray;
+    color: var(--font-color);
     font-size: large;
     text-decoration: none;
     text-align: left;
     display: block;
 }
 
-.buttonContainer {
+.welcome-message {
+    margin-top: 20px;
+    font-size: 70px;
+    color: var(--secondary-color);
+}
+
+/* directory structuring */
+.container {
     margin-left: auto;
     margin-right: auto;
     width: 60%;
 }
 
-.linkButton {
-    margin-left: auto;
-    margin-right: auto;
-    background-color: rgb(15, 15, 15);
-    margin-bottom: 5px;
-    padding: 10px;
-    border-radius: 5px;
-    width: 300px;
+.icon {
+    margin: -3px;
+    float: right;
 }
 
-.linkButton:hover {
-    background-color: rgb(145, 0, 0);
-
-    .anim_text {
-        margin-left: 50px;
-    }
-}
-
-.gotoButton {
-    background-color: rgb(15, 15, 15);
-    margin-bottom: 5px;
-    padding: 10px;
-    border-radius: 5px;
-    text-align: center;
-    margin: 5px;
-    width: 160px;
-}
-
-.gotoButton:hover, .nav-button:hover {
-    background-color: rgb(145, 0, 0);
-}
-
-.links {
+.buttons-container {
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
 }
 
-.nav-button {
-    width: 120px;
-    background-color: rgb(15, 15, 15);
+.error {
+    color: rgb(0, 0, 0);
+    font-size: xx-large ;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+    background-color: red;
+    border-radius: 10px;
+    overflow-x: hidden;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+/* back button */
+.back-button {
+    margin: 5px;
+    margin-left: auto;
+    margin-left: auto;
     padding: 10px;
     border-radius: 5px;
+    width: 150px;
+    height: auto;
+    background-color: var(--contrast-color);
 }
-.icon {
-        float: right;
+
+.back-button:hover {
+    background-color: var(--secondary-color);
+    .anim-text {
+        margin-left: 55px;
+    }
+}
+
+
+/* folder structuring */
+.folder-button {
+    background-color: var(--contrast-color);
+    margin: 5px;
+    padding: 10px;
+    border-radius: 5px;
+    width: 250px;
+    max-height: 200px;
+}
+
+.folder-button:hover {
+    background-color: var(--secondary-color);
+
+    .anim-text {
+        margin-left: 50px;
+    }
+}
+
+/* site buttons structuring */
+.link-button {
+    background-color: var(--contrast-color);
+    padding: 10px;
+    border-radius: 5px;
+    text-align: center;
+    margin: 5px;
+    width: 170px;
+}
+
+.link-button:hover, .nav-button:hover {
+    background-color: var(--secondary-color);
 }
