--- a/templates/directory.html
+++ b/templates/directory.html
@@ -1,23 +1,30 @@
 {% extends 'layout.html' %}
 {% block content %}
-<h3>Home</h3>
-<div class="buttonContainer">
+<h3>{{ title }}</h3>
+<div class="container">
     <h2>Directory</h2>
-    {% if title != "Home" %}
-        <a href="javascript:history.back()">
-            <div class="linkButton"><span class="anim_text">Back</span><span class="icon">↩</span></div>
-        </a>
-    {% endif %}
-    {% for folders in folders %}
-        <a href="{{ folders[1] }}">
-            <div class="linkButton"><span class="anim_text">{{ folders[0] }}</span><span class="icon">🗀</span></div>
-        </a>
-    {% endfor %}
+    <div class="buttons-container">
+        {% if title != "Home" %}
+            <a href="javascript:history.back()">
+                <div class="back-button"><span class="anim-text">Back</span><span class="icon">↩</span></div>
+            </a>
+        {% endif %}
+    </div>
+    <div class="buttons-container">
+        {% for folders in folders %}
+            <a href="{{ folders[1] }}">
+                <div class="folder-button"><span class="anim-text">{{ folders[0] }}</span><span class="icon">🗀</span></div>
+            </a>
+        {% endfor %}
+    </div>
     <h2>Links</h2>
-    <div class="links">
+    {% if not sites %}
+        <h2 class="notfound-error">Directory not found</h2>
+    {% endif %}
+    <div class="buttons-container">
         {% for sites in sites %}
             <a href="{{ sites[1] }}">
-                <div class="gotoButton">{{ sites[0] }}</div>
+                <div class="link-button">{{ sites[0] }}</div>
             </a>
         {% endfor %}
     </div>
