--- a/templates/error.html
+++ b/templates/error.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="header-background">
-        <h1>An error has occurred</h1>
+        <h1>Uh oh!</h1>
     </div>
     <h2>Page not accessible due to error:</h2>
     <h3 class="error">{{ error }}</h3>
@@ -22,4 +22,5 @@
             <div class="link-button"><span class="anim-text">Return to home</span><span class="icon">↩</span></div>
         </a>
     </div>
+    {% include 'boring.html' %}
 </html>
