--- a/templates/header.html
+++ b/templates/header.html
@@ -2,4 +2,4 @@
     <h1><span>BHS</span> Student Portal</h1>
 </div>
 <h1 class="welcome-message">Kia ora</h1>
-<p>Powered by Flask</p>
+<p>Te Kura o Waimairi-iri</p>
