Made links open in a new tab

--- a/templates/directory.html
+++ b/templates/directory.html
@@ -23,7 +23,7 @@
     {% endif %}
     <div class="buttons-container">
         {% for sites in sites %}
-            <a href="{{ sites[1] }}">
+            <a href="{{ sites[1] }}" target="_blank" rel="opener">
                 <div class="link-button">{{ sites[0] }}</div>
             </a>
         {% endfor %}
