--- a/templates/error.html
+++ b/templates/error.html
@@ -19,7 +19,7 @@
     <h3 class="error">{{ error }}</h3>
     <div class="buttons-container">
         <a href="/home">
-            <div class="link-button"><span class="anim-text">Return to home</span><span class="icon">↩</span></div>
+            <div class="link-button"><span class="anim-text">Return to home</span><span class="icon"><img src="/static/images/home.svg" alt="Return home"></span></div>
         </a>
     </div>
     {% include 'boring.html' %}
