Made it case insensitve and the urls auto generated

--- a/static/style.css
+++ b/static/style.css
@@ -87,6 +87,7 @@ a {
     background-color: var(--primary-color);
 
     p {
+        color: var(--secondary-color);
         margin: 0px;
     }
 }
