Made greeting hide when not in home directory

--- a/static/style.css
+++ b/static/style.css
@@ -103,6 +103,8 @@ a {
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
+    max-height: 350px;
+    overflow-y: auto;
 }
 
 .error {
