--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,7 @@
 <div class="header-background">
     <h1><span>BHS</span> Student Portal</h1>
 </div>
-<h1 class="welcome-message">Kia ora</h1>
-<p>Te Kura o Waimairi-iri</p>
+{% if title.title() == "Home" %}
+    <h1 class="welcome-message">Kia ora</h1>
+    <p>Te Kura o Waimairi-iri</p>
+{% endif %}
