--- a/static/style.css
+++ b/static/style.css
@@ -77,7 +77,7 @@ a {
     margin-left: auto;
     margin-right: auto;
     width: 60%;
-    margin-bottom: 70px;
+    margin-bottom: 150px;
 }
 
 .info {
@@ -103,8 +103,6 @@ a {
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
-    max-height: 350px;
-    overflow-y: auto;
 }
 
 .error {
@@ -114,7 +112,7 @@ a {
     margin-right: auto;
     width: 40%;
     background-color: red;
-    border-radius: 10px;
+    border-radius: 5px;
     overflow-x: hidden;
     padding: 20px; 
 }
@@ -169,4 +167,30 @@ a {
 
 .link-button:hover, .nav-button:hover {
     background-color: var(--secondary-color);
+}
+
+.home-button-container {
+    position: fixed;
+    justify-self: center;
+    bottom: 50px;
+    background-color: rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(5px);
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+}
+
+.home-button {
+    padding: 8px;
+    border-radius: 5px;
+    text-align: center;
+    margin: 7px;
+    width: 170px;
+    font-weight: bolder;
+    color: white;
+    background-color: var(--contrast-color);
+}
+
+.home-button:hover{
+    background-color: red;
 }
