--- a/templates/directory.html
+++ b/templates/directory.html
@@ -4,12 +4,14 @@
     <h2>Directory</h2>
     <h3>{{ title }}</h3>
     <div class="buttons-container">
+        <!-- Show the 'Back' button when not in the homepage -->
         {% if title.title() != "Home" %}
             <a href="{{ back }}">
                 <div class="back-button"><span class="anim-text">Back</span><span class="icon"><img src="/static/images/previous.svg" alt="back button"></span></div>
             </a>
         {% endif %}
     </div>
+    <!-- Folders -->
     <div class="buttons-container">
         {% for folders in folders %}
             <a href="{{ folders[1] }}">
@@ -18,9 +20,11 @@
         {% endfor %}
     </div>
     <h2>Links</h2>
-    {% if not sites %}
+    <!-- Show error message if there are links -->
+    {% if not sites %} 
         <h2 class="error">Folder has no links</h2>
     {% endif %}
+    <!-- Links -->
     <div class="buttons-container">
         {% for sites in sites %}
             <a href="{{ sites[1] }}" target="_blank" rel="opener">
@@ -29,4 +33,11 @@
         {% endfor %}
     </div>
 </div>
+{% if title.title() != "Home" %}
+    <div class="home-button-container">
+        <a href="/home">
+            <div class="home-button"><span class="anim-text">Return to home</span></div>
+        </a>
+    </div>
+{% endif %}
 {% endblock %}
