--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,7 @@
 <div class="header-background">
     <h1><span>BHS</span> Student Portal</h1>
 </div>
+<!-- Show the welcome message only on the homepage -->
 {% if title.title() == "Home" %}
     <h1 class="welcome-message">Kia ora</h1>
     <p>Te Kura o Waimairi-iri</p>
