--- a/templates/directory.html
+++ b/templates/directory.html
@@ -36,7 +36,7 @@
 {% if title.title() != "Home" %}
     <div class="home-button-container">
         <a href="/home">
-            <div class="home-button"><span class="anim-text">Return to home</span></div>
+            <div class="home-button"><span class="anim-text">Return to homepage</span></div>
         </a>
     </div>
 {% endif %}
