--- a/templates/boring.html
+++ b/templates/boring.html
@@ -1,3 +1,3 @@
 <div class="info">
-    <p>Site is not affiliated with Burnside High School | Copyright 2025 - Chris From 12DTP</p>
+    <p>{{ vars['contact_info'] }}</p>
 </div>
