--- a/templates/error.html
+++ b/templates/error.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ vars["site_title"] }} - Page Not Found</title>
+    <title>{{ vars["site_title"] }} - Page Error</title>
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
     <link rel="shortcut icon" href="/static/images/favicon.png" type="image/x-icon">
     <style>
