--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ vars["site_title"] }} - {{ title }}</title>
     <link rel="stylesheet" href="/static/style.css">
-    <link rel="shortcut icon" href="/static/images/favicon.png" type="image/x-icon">
+    <link rel="icon" href="/static/images/favicon.svg" type="image/svg+xml">
     <!-- This style is here so variables from the Python script work in CSS -->
     <style>
         span, .link-button, .folder-button, .back-button, .home-button {
